force-app/main/default/objects/Log_Alert_Setting__mdt/Log_Alert_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Log Alert Setting</label>
    <pluralLabel>Log Alert Settings</pluralLabel>
</CustomObject>