force-app/main/default/objects/Log_Alert_Setting__mdt/fields/EmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>EmailEnabled__c</fullName>
    <label>Email Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>