force-app/main/default/objects/Log_Alert_Setting__mdt/fields/EmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipients__c</fullName>
    <label>Email Recipients (comma-separated)</label>
    <type>Text</type>
    <length>500</length>
</CustomField>