force-app/main/default/objects/Log_Alert_Setting__mdt/fields/SlackEnabled__c.field-meta.xml
<CustomField>
    <fullName>SlackEnabled__c</fullName>
    <label>Slack Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>