force-app/main/default/objects/Log_Alert_Setting__mdt/fields/SlackWebhookUrl__c.field-meta.xml
<CustomField>
    <fullName>SlackWebhookUrl__c</fullName>
    <label>Slack Webhook URL</label>
    <type>Text</type>
    <length>255</length>
    <description>Starter-simple: raw webhook URL in Custom Metadata. For production, swap this for a Named Credential so the URL isn't visible to anyone who can view Custom Metadata (which is broader than who can view Named Credentials).</description>
</CustomField>